fix chat bubble on mobile

--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -417,8 +417,11 @@ form.chat-file-send-form {
 }
 
 .chat-wrap {
-  width: fit-content;
+  //width: fit-content;
   max-width: 400px; /* Adjust this value as needed */
+  @media (max-width: $responsive-sm) {
+    max-width: 180px;
+  }
   word-wrap: break-word;
   white-space: pre-wrap;
   overflow-wrap: break-word;
